--- a/package.json
+++ b/package.json
@@ -11,15 +11,25 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.1",
+    "cors": "^2.8.5",
     "daisyui": "^2.51.6",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "firebase": "^9.22.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mongodb": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-icons": "^4.8.0",
+    "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
+    "react-simple-captcha": "^9.0.2",
+    "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.9",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
@@ -34,5 +44,18 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
-  }
+  },
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ibrahim9638/BistroBoss.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ibrahim9638/BistroBoss/issues"
+  },
+  "homepage": "https://github.com/Ibrahim9638/BistroBoss#readme",
+  "description": ""
 }
